new way to handle source/newSource in AddSnippetDialog.